# library-metamorphic-testing

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO  api_fuzzer.cpp  api_fuzzer.hpp  gen_and_run_one.sh  isl_tester.cpp  isl_tester.hpp  meta_runner.py  set_fuzzer.cpp  set_fuzzer.hpp  set_meta_tester.cpp  set_meta_tester.hpp  set_meta_tests  set_meta_tests.yaml  set_tester.cpp  set_tester.hpp  small.cpp
config_files/: api_fuzzer_boost_multiprecision.yaml  api_fuzzer_gmp.yaml  api_fuzzer_gmp_integer.yaml  api_fuzzer_gmp_rational.yaml  api_fuzzer_isl.yaml  api_fuzzer_isl_cons_proj.yaml  api_fuzzer_isl_point.yaml  api_fuzzer_isl_point_project.yaml  api_fuzzer_omega.yaml  api_fuzzer_ppl.yaml  api_fuzzer_strtk.yaml  api_fuzzer_z3.yaml  config.yaml  config.yaml.template  config_boost_multiprecision.yaml  config_gmp.yaml  config_gmp_integer.yaml  config_gmp_rational.yaml  config_isl.yaml  config_isl_cons_project.yaml  config_omega.yaml  config_strtk.yaml  config_z3.yaml  set_meta_tests.yaml  set_meta_tests_boost_multiprecision.yaml  set_meta_tests_gmp.yaml  set_meta_tests_gmp_integer.yaml  set_meta_tests_gmp_rational.yaml  set_meta_tests_isl.yaml  set_meta_tests_omega.yaml  set_meta_tests_ppl.yaml  set_meta_tests_strtk.yaml  set_meta_tests_z3.yaml
config_files/eigen_matrix/: api_fuzzer_eigen_matrix.yaml  config_eigen_matrix.yaml  float-api_fuzzer_eigen_matrix.yaml  float-set_meta_tests_eigen_matrix.yaml  new-api_fuzzer_eigen_matrix.yaml  old-api_fuzzer_eigen_matrix.yaml  old-set_meta_tests_eigen_matrix.yaml  set_meta_tests_eigen_matrix.yaml
config_files/gmp/: api_fuzzer_gmp_rational.yaml  config_gmp_integer.yaml  config_gmp_rational.yaml  set_meta_tests_gmp_integer.yaml
config_files/isl/: api_fuzzer_isl_cons_project.yaml  api_fuzzer_isl_point_project.yaml  api_fuzzer_isl_unite.yaml  config_isl.yaml  config_isl_point_project.yaml  set_meta_tests_isl.yaml
config_files/omega/: api_fuzzer_omega.yaml  config_omega.yaml  set_meta_tests_omega.yaml
doc/: README_specifications.md
docker/: Dockerfile  Dockerfile_base  Dockerfile_base_boost  Dockerfile_base_clang  Dockerfile_base_eigen  Dockerfile_base_gmp  Dockerfile_base_isl_maint  Dockerfile_base_z3  Dockerfile_boost_multiprecision  Dockerfile_clang_isl  Dockerfile_eigen  Dockerfile_gmp  Dockerfile_gmp_cons_maint  Dockerfile_gmp_integer  Dockerfile_gmp_rational  Dockerfile_isl_cons_maint  Dockerfile_isl_point_maint  Dockerfile_z3  Dockerfile_z3_par
doxygen/: Doxyfile
include/: api_elements.hpp  api_elements.tpp  api_fuzz_rand_gen.hpp  api_fuzzer.hpp  clang_interface.hpp  effolkronium  fmt  isl-noexceptions-noprint.h  isl-noexceptions-print.h  isl-noexceptions.h  isl-noexceptions.h.trace  isl_tester.hpp  ppl.hh  reduction.hpp  set_meta_tester.hpp  set_meta_tester_new.hpp  strtk.hpp  test_emitter.hpp  yaml-cpp
input_tests/: extract_sets.py  input_sets_autotuner  input_sets_temp
libs/: libgmp.so.10  libgmpxx.so.4  libisl.so.19  libisl.so.19.1.0  libomega.so.0
scripts/: gen_and_run_one.sh  meta_runner.py  par.sh  rebuild_base.sh  trivial_set.sh
src/: api_elements.cpp  api_fuzz_rand_gen.cpp  api_fuzzer.cpp  clang_interface.cpp  isl_tester.cpp  isl_tester.cpp.old  reduction.cpp  set_fuzzer.cpp  set_meta_tester.cpp  set_meta_tester_new.cpp  set_meta_tests.yaml  set_tester.cpp  test_emitter.cpp
(+214 files in other folders)
